Create html &  stylesheet

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 </head>
 <body>
     <h1>About Me!</h1>
+    <h2>A bit about me</h2>
+    <p>Hello! My Name is Shane Moyo, thank you for visiting my page. I am 25 years old, I was born in Portland on July 18th 1992. I am a student at Portland State University as well as Alchemy Code Lab! I love to travel, someday I hope to travel all over the world! When im not travling I like to spend my time drawing.</p>
+    
+    <h3>Education</h3>
+    <li>Portland Community college - Associates Science</li>
+    <li>Portland State University - Mathematics </li>
+    <li>Alchemy Code Lab - Code 201 </li> 
+
+    <h4>Work History</h4>
+    <li>Bridge & Burn - Ecommerce</li>
+    <li>Levi & Strauss - Retail</li>
+    
     <script src="app.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
 </body>
