Add top ten book list

--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
     <h4>Work History</h4>
     <li>Bridge & Burn - Ecommerce</li>
     <li>Levi & Strauss - Retail</li>
+
+    <h4>My Top ten favorite books!</h4>
+    <ol>
+        <li>Mutiny and Its Bounty</li>
+        <li>Zero to One</li>
+        <li>peak</li>
+        <li>The Consuming Instinct</li>
+        <li>Fluke</li>
+        <li>When Breath Becomes Air</li>
+        <li>Other Minds</li>
+        <li>The Wealth of Nations</li>
+        <li>Sapiens</li>
+        <li>A Brief History of Time</li>
+
+    </ol>
     
     <script src="app.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
