add functions and link app2.js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     </ol>
     
-    <script src="app.js"></script>
+    <script src="app2.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
 </body>
 </html>
