--- a/index.html
+++ b/index.html
@@ -1,48 +1,49 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Welcome to My Second Project!</title>
 </head>
+
 <body>
     <h1 class="title">Shane Moyo</h1>
-        
+
     <div>
-    <img src="me.png" alt="A picture of me eating ice cream." style="width:30%;height:30;" padding="10%;">
+        <img src="me.png" alt="A picture of me eating ice cream." style="width:30%;height:30;" padding="10%;">
 
-    <h1>Information</h1>
-    <h4>General Overview</h4>
-    <p>Hello! My Name is Shane Moyo, thank you for visiting my page. 
-        I am 25 years old, I was born in Portland, Oregon on July 18th 1992. 
-        I am a student at Portland State University as well as Alchemy Code Lab! I love to travel,
-        someday I hope to travel all over the world! My favorite pass time is drawing so, 
-        I spend most of my free time trying to improve my doodles. When I am not drawing I like to spend time
-    reading, I especially enjoy books about Science and Mathematics.</p>
-    
-    <h4>Education</h4>
-    <li>Portland Community college - Associates Science</li>
-    <li>Portland State University - Mathematics </li>
-    <li>Alchemy Code Lab - Code 201 </li> 
+        <h1>Information</h1>
+        <h4>General Overview</h4>
+        <p>Hello! My Name is Shane Moyo, thank you for visiting my page. I am 25 years old, I was born in Portland, Oregon on
+            July 18th 1992. I am a student at Portland State University as well as Alchemy Code Lab! I love to travel, someday
+            I hope to travel all over the world! My favorite pass time is drawing so, I spend most of my free time trying
+            to improve my doodles. When I am not drawing I like to spend time reading, I especially enjoy books about Science
+            and Mathematics.</p>
 
-    <h4>Work History</h4>
-    <li>Bridge & Burn - Ecommerce</li>
-    <li>Levi & Strauss - Retail</li>
+        <h4>Education</h4>
+        <li>Portland Community college - Associates Science</li>
+        <li>Portland State University - Mathematics </li>
+        <li>Alchemy Code Lab - Code 201 </li>
 
-    <h4>My Top ten favorite books</h4>
-    <ol>
-        <li>Mutiny and Its Bounty</li>
-        <li>Zero to One</li>
-        <li>peak</li>
-        <li>The Consuming Instinct</li>
-        <li>Fluke</li>
-        <li>When Breath Becomes Air</li>
-        <li>Other Minds</li>
-        <li>The Wealth of Nations</li>
-        <li>Sapiens</li>
-        <li>A Brief History of Time</li>
+        <h4>Work History</h4>
+        <li>Bridge & Burn - Ecommerce</li>
+        <li>Levi & Strauss - Retail</li>
 
-    </ol>
+        <h4>My Top ten favorite books</h4>
+        <ol>
+            <li>Mutiny and Its Bounty</li>
+            <li>Zero to One</li>
+            <li>peak</li>
+            <li>The Consuming Instinct</li>
+            <li>Fluke</li>
+            <li>When Breath Becomes Air</li>
+            <li>Other Minds</li>
+            <li>The Wealth of Nations</li>
+            <li>Sapiens</li>
+            <li>A Brief History of Time</li>
+        </ol>
     </div>
-    <script src="app3.js"></script> 
+    <script src="app3.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
 </body>
+
 </html>
